--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -629,7 +629,7 @@ These assume some refine context pair $\tup{\mathbf{m}, \mathbf{e}} \in \tuple{\
     \using \mathbf{m}^* &= \mathbf{m} \exc \begin{cases}
       \mathbf{m}^*\subb{n}_\pg¬ram = \mathbf{u}'\\
       \mathbf{m}^*\subb{n}_\pg¬pc = \begin{cases}
-        i' + 1 &\when c \in \set{ \host } \times \pvmreg\\
+        i' + \Fskip(\imath') + 1 &\when c \in \set{ \host } \times \pvmreg\\
         i' &\otherwise
       \end{cases}
     \end{cases}\\
