--- a/text/overview.tex
+++ b/text/overview.tex
@@ -54,8 +54,8 @@ Much as in the \emph{YP}, we specify $\transitionstate$ as the implication of fo
   \previousset' &\prec \tup{\theheader, \thetime, \previousset, \activeset} \\
   \disputes' &\prec \tup{\xtdisputes, \thetime, \activeset, \previousset, \disputes} \\
   \reportspostjudgement &\prec \tup{\xtdisputes, \reports} \label{eq:rhodagger} \\
-  \reportspostguarantees &\prec \tup{\xtassurances, \activeset, \reportspostjudgement} \label{eq:rhoddagger} \\
-  \reports' &\prec \tup{\xtguarantees, \reportspostguarantees, \authpool, \accountspre, \activeset', \previousset', \thetime', \entropy', \disputes', \recenthistorypostparentstaterootupdate} \label{eq:rhoprime} \\
+  \reportspostguarantees &\prec \tup{\xtassurances, \reportspostjudgement} \label{eq:rhoddagger} \\
+  \reports' &\prec \tup{\xtguarantees, \reportspostguarantees, \authpool, \accountspre, \thetime', \entropy', \recenthistorypostparentstaterootupdate} \label{eq:rhoprime} \\
   \justbecameavailable^* &\prec \tup{\xtassurances, \reportspostjudgement} \\
   \tup{\ready', \accumulated', \accountspostxfer, \privileges', \stagingset', \authqueue', \lastaccout', \accumulationstatistics} &\prec \tup{\justbecameavailable^*, \ready, \accumulated, \accountspre, \privileges, \stagingset, \authqueue, \thetime, \thetime', \entropy'} \label{eq:accountspostxfer} \\
   \recenthistory' &\prec \tup{\theheader, \xtguarantees, \recenthistorypostparentstaterootupdate, \lastaccout'} \label{eq:betaprime} \\
