--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -60,7 +60,7 @@ The objective statistics are updated in line with their description, formally:
         0 &\otherwise
       \end{cases}\\
     \valstatsaccumulator'\subb{v}_\vs¬guarantees &\equiv
-      \mathbf{a}\subb{v}_\vs¬guarantees + \sum_{\activeset'\sub{v} \in \reporters}{1}\\
+      \mathbf{a}\subb{v}_\vs¬guarantees + \lvert \set{\build{\tup{\xg¬workreport, \xg¬timeslot, \xg¬credential} \in \xtguarantees}{\activeset'\sub{v} \in \reporters}} \rvert\\
     \valstatsaccumulator'\subb{v}_\vs¬assurances &\equiv
       \mathbf{a}\subb{v}_\vs¬assurances +
         (\exists a \in \xtassurances : a_\xa¬assurer = v)
