--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -205,10 +205,10 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\stagingset$] The validator keys and metadata to be drawn from next. See equation \ref{eq:validatorkeys}.
   \item[$\activeset$] The validator keys and metadata currently active. See equation \ref{eq:validatorkeys}.
   \item[$\previousset$] The validator keys and metadata which were active in the prior epoch. See equation \ref{eq:validatorkeys}.
-  \item[$\availassignments$] The pending work-report guarantees, per core, which are being made available prior to accumulation. See equation \ref{eq:reportingstate}.
+  \item[$\availassignments$] The availability assignments. A core's availability assignment is the work-report guarantee which is being made available prior to accumulation. See equation \ref{eq:reportingstate}.
   \begin{description}
     \item[$\availassignmentspostjudgment$] The post-judgment, pre-assurances-extrinsic intermediate state. See equation \ref{eq:removenonpositive}.
-    \item[$\availassignmentspostassurances$] The post-assurances-extrinsic, pre-guarantees-extrinsic, intermediate state. See equation \ref{eq:availassignmentspostassurancesdef}.
+    \item[$\availassignmentspostassurances$] The post-assurances-extrinsic, pre-guarantees-extrinsic intermediate state. See equation \ref{eq:availassignmentspostassurancesdef}.
   \end{description}
   \item[$\thestate$] The overall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}.
   \item[$\thetime$] The most recent block's timeslot. See equation \ref{eq:timeslotindex}.
