Add back processed transfer count to service statistics
This was removed when accumulate was combined with on_transfer. It seems
like useful statistic, so add it back.

--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -159,7 +159,7 @@ Finally, the service statistics are updated using the same intermediate values a
       }\,,\;\\
       \is{\ss¬accumulation&}{
         \span\span
-        \subifnone{\accumulationstatistics\subb{s}, \tup{0, 0}}
+        \subifnone{\accumulationstatistics\subb{s}, \tup{0, 0, 0}}
       }
     \end{alignedat}
   }\!\!\!\!\\
