Fix \servicestats type

--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -96,7 +96,7 @@ The other two components of statistics are the core and service activity statist
       \isa{\ss¬xtcount}{\N}\,,\;
       \isa{&\ss¬xtsize&}{\N}\,,\;
       \isa{\ss¬exportcount}{\N}\,,\;\\
-      \isa{\ss¬accumulation&}{\tup{\N, \gas}}
+      \isa{\ss¬accumulation&}{\tup{\N, \N, \gas}}
     \end{alignedat}
   }}
 \end{align}
